Gumshoe by Roll20/GUMSHOE.css
/* ... */
.sheet-container .repcontrol .repcontrol_add::before,
.sheet-container .repcontrol .repcontrol_edit::after {
    visibility: visible;
    background-color: #fff;
    border: 1px solid #999;
    border-radius: 2px;
    font-size: 12px;
    height: 12px;
    width: 12px;
    padding: 2px 4px 2px 4px;
    color: #333;
}

.sheet-container .repcontrol .repcontrol_edit:hover::after,
.sheet-container .repcontrol .repcontrol_add:hover::before
{
    background-color: #EFEFEF;
}

.sheet-content input.sheet-edit + span,
.sheet-content div.sheet-placeholder span::before,
input.sheet-main-options.sheet-options-flag + span,
.sheet-content .sheet-abilities input.sheet-free + span::before,
.sheet-content .sheet-ability-edit p.sheet-mos-message span::before,
input[type=radio]:checked ~ .sheet-master-container input.sheet-options-flag + span,
input[type=radio]:checked ~ .sheet-master-container .repcontrol .repcontrol_add::before,
input[type=radio]:checked ~ .sheet-master-container .repcontrol .repcontrol_edit::after,
input[type=radio]:checked ~ .sheet-master-container .itemcontrol button.repcontrol_del,
input[type=radio]:checked ~ .sheet-master-container .sheet-abilities-col input.sheet-mos {
	font-family: pictos;
	font-style: normal;
}

/*-------------------------------------------*/
/*--------------- NPC Styles ----------------*/
/*-------------------------------------------*/

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container {
	width: 500px;
	background: white;
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-pc-hide {
	display: inline-block;
}

input.sheet-npc:checked ~ input.sheet-toc:checked ~ .sheet-master-container .sheet-header {
	display: none;
}

input.sheet-npc:checked ~ input.sheet-nba:checked ~ .sheet-master-container .sheet-header.sheet-npc-full {
	width: 525px;
	overflow: hidden;
}

input.sheet-npc:checked ~ input.sheet-nba:checked ~ .sheet-master-container .sheet-header img {
	width: 875px;
	max-width: 875px;
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-npc-full {
	width: 100%;
	float: left;
	margin: 0;
	padding-left: 0;
	box-sizing: border-box;
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-npc-full div {
	margin-top: 0;
	margin-bottom: 0;
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-npc-full .sheet-abilities {
	display: block;
	margin-left: 30px;
	width: calc(100% - 60px);
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col.sheet-general,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col.sheet-general .repcontrol,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col.sheet-general .repcontainer {
	width: 100%;
	display: inline-block;
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item,
input.sheet-npc:checked ~ input.sheet-toc:checked ~ .sheet-master-container .sheet-abilities-col .sheet-abilities-item.sheet-nba-npc,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item span span,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item .sheet-max,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-header,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col .sheet-max + div,
input.sheet-npc:checked ~ input.sheet-nba:checked ~ .sheet-master-container .sheet-abilities-item.sheet-npc-ability.sheet-nba-hide,
input.sheet-npc:checked ~ input.sheet-toc:checked ~ .sheet-master-container .sheet-abilities-item.sheet-npc-ability.sheet-toc-hide,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities .sheet-free,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities .sheet-free + span,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col .repcontrol,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col .repcontainer,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col .sheet-abilities-item .repcontrol,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col .sheet-abilities-item .repcontainer {
	display: none;
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item span,
input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col .sheet-available + div {
	display: inline-block;
	vertical-align: top;
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item button[type=roll] {
	width: 85%;
	vertical-align: top;
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item.sheet-npc-ability {
	display: inline-block;
	width: 100%;
}

input.sheet-npc:checked ~ input.sheet-toc:checked ~ .sheet-master-container .sheet-section {
	background: white;
	min-height: 0;
	min-width: 0;
	margin-top: 0;
	margin-bottom: 0;
}

input.sheet-toc:checked ~ .sheet-master-container .sheet-section::before {
	display: none;
}

input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-resistances .sheet-armor {
	display: inline-block;
	width: 100%;
}
/* ... */

